# n-body-bevy

./: Cargo.toml
.cargo/: config.toml
Shaders/: shader.compute
assets/: shader.wgsl
src/: gpu.rs  main.rs  wgpu.rs
