[package]
name = "n-body-bevy"
version = "0.1.0"
authors = ["Avery <averymacweb@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7.0" }
bevy_prototype_lyon = "0.5.0"
rand = "0.8.3"
bevy_spatial = { version = "0.1.0", features=["rstar"] }

[profile.release]
debug = 1